--- a/test2.html
+++ b/test2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <body>
     <h1>
-        This is a test GitHub file
+        This is a second test GitHub file
     </h1>
 </body>
 
